<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.android.example.rickandmortyquiz.screens.title.TitleFragment"
        android:label="@string/title_text"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.android.example.rickandmortyquiz.screens.about.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.android.example.rickandmortyquiz.screens.rules.RulesFragment"
        android:label="@string/rules_title"
        tools:layout="@layout/fragment_rules" />
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.android.example.rickandmortyquiz.screens.game.GameFragment"
        android:label="@string/game_title"
        tools:layout="@layout/game_fragment">
        <action
            android:id="@+id/action_gameFragment_to_gameOverFragment"
            app:destination="@id/gameOverFragment"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameOverFragment"
        android:name="com.android.example.rickandmortyquiz.screens.score.GameOverFragment"
        android:label="@string/game_over_title"
        tools:layout="@layout/fragment_game_over">
        <argument
            android:name="score"
            android:defaultValue="Your Score: 0/10"
            app:argType="string" />
    </fragment>
</navigation>