<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/game_start_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:background="@drawable/custom_rounded_corners"
            android:backgroundTint="?attr/colorOnSecondary"
            android:text="@string/play_button"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/title_text"
            android:textColor="?attr/colorSecondary"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_50dp"
            android:text="@string/title_text2"
            android:textColor="?attr/colorSecondary"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title1_text" />

        <ImageView
            android:id="@+id/title_image"
            android:layout_width="307dp"
            android:layout_height="358dp"
            android:layout_marginTop="@dimen/margin_50dp"
            android:layout_marginBottom="@dimen/margin_50dp"
            android:layout_weight="1"
            android:src="@drawable/rnm01"
            app:layout_constraintBottom_toTopOf="@+id/game_start_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title2_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>